[project]
name = "project-builder-ai-coding-assistant"
version = "0.1.0"
description = "An AI multi-agent coding assistant built with LangGraph (planner, architect, coder)."
readme = "README.md"
authors = [
    { name = "Akash" },
]
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.27",
    "langchain-core>=0.3.72",
    "langchain-openai>=0.3.0",
    "langgraph>=0.6.3",
    "pip>=25.2",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
]
